Bug 239560 - kpresenter:msoffice2007:Embedded ppt is not displayed in Kpresenter.
Summary: kpresenter:msoffice2007:Embedded ppt is not displayed in Kpresenter.
Status: VERIFIED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: filters (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-20 05:28 UTC by Lassi Nieminen
Modified: 2010-12-27 09:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test Document to be tested in Kpresenter and MS office 2007. (64.20 KB, application/x-zip-compressed)
2009-11-20 05:28 UTC, Lassi Nieminen
Details
screenshot of the document in KPresenter (159.52 KB, image/pjpeg)
2009-11-20 05:28 UTC, Lassi Nieminen
Details
screenshot of the document in MS office 2007. (80.04 KB, image/pjpeg)
2009-11-20 06:03 UTC, Lassi Nieminen
Details
pyodconverter converted testdata (41.25 KB, application/x-zip-compressed)
2010-03-04 15:58 UTC, Lassi Nieminen
Details
koconverter converted testdata (6.65 KB, application/x-zip-compressed)
2010-03-04 15:58 UTC, Lassi Nieminen
Details
screenshot of pyodconverter converted testdata opened in koffice (167.26 KB, image/x-png)
2010-03-04 15:59 UTC, Lassi Nieminen
Details
screenshot of koconverter converted testdata opened in openoffice (130.96 KB, image/x-png)
2010-03-04 16:00 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-05-28 03:23:50 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2009-11-20 06:28:25 +0200 ----

Created an attachment
Test Document to be tested in Kpresenter and MS office 2007.

Test document to be tested in MSOffice and Kpresenter.

SOFTWARE VERSION:
Kubuntu version 9.04
KOffice Version 1050835
Test Document(MS Office 2007): mp07_embedded_ppt.ppt

STEPS LEADING TO PROBLEM: 

1.Open the PPT in MS Powerpoint 2007.
2.Open the same document in KPresenter.
3.Observe the first slide.


EXPECTED OUTCOME:
The embedded ppt should be displayed.See
attachment(mp07_embedded_ppt.jpeg)

ACTUAL OUTCOME:
The embedded ppt is not displayed.See
attachment(kp_embedded_ppt.jpeg)

FREQUENCY OF OCCURRENCE: 
Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-11-20 06:28:56 +0200 ----

Created an attachment
screenshot of the document in KPresenter



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-11-20 07:03:33 +0200 ----

Created an attachment
screenshot of the document in MS office 2007.



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-04 16:58:30 +0200 ----

Created an attachment
pyodconverter converted testdata



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-04 16:58:44 +0200 ----

Created an attachment
koconverter converted testdata



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-04 16:59:38 +0200 ----

Created an attachment
screenshot of pyodconverter converted testdata opened in koffice



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-04 17:00:08 +0200 ----

Created an attachment
screenshot of koconverter converted testdata opened in openoffice



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-04 17:01:50 +0200 ----

Observation in version 1096327 for MSOffice 2007

Koffice loads pyod converted document better.



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-11 12:32:11 +0200 ----

Reassign to ingwa



--- Bug imported by faure@kde.org 2010-05-28 03:23  ---

This bug was previously known as _bug_ 147550.

Imported an attachment (id=46299)
Imported an attachment (id=46300)
Imported an attachment (id=46301)
Imported an attachment (id=46302)
Imported an attachment (id=46303)
Imported an attachment (id=46304)
Imported an attachment (id=46305)

Unknown bug field "example" encountered while moving bug
   <example>2010-03-11 12:32:11</example>

Comment 1 Sebastian Sauer 2010-10-05 15:04:38 UTC
With r1182677 the embedded ppt (or to be more exact it's preview-image) is displayed now. That the position and size is incorrect is caused by missing functionality in koffice/plugins/vectorshapelibemf/EmfOutputPainterStrategy.cpp;

void OutputPainterStrategy::setMetaRgn()
{
    kDebug(33100) << "EMR_SETMETARGN not yet implemented";
}

This method should "intersects the current clipping region for the playback device context with the current metaregion and saves the combined region as the new metaregion." (from the MS-EMF.pdf specs).
Comment 2 Inge Wallin 2010-12-05 16:44:16 UTC
SVN commit 1203890 by ingwa:

Fix bug 239560: kpresenter:msoffice2007:Embedded ppt is not displayed in Kpresenter

 * Only recalculate the world transform if a
   Set{Window,Viewport}{Org,Ext} record actually changes anything.
 * Don't call recalculateWorldTransform in
   {set,modify}WorldTransform().

BUG: 239560


 M  +55 -5     EmfOutputPainterStrategy.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1203890
Comment 3 Inge Wallin 2010-12-05 16:53:31 UTC
EMR_SETMETAARGN had nothing to do with it, so changing the title of the bug.
Comment 4 swathi 2010-12-27 09:43:49 UTC
Verified in latest calligra revision.((Git  commit 78f327920cfbc1143d2fdd5a6987a517ece2952f).
Embeded ppt is displaying.But the text with in the embedded ppt is overlapping.
It will be detailed as a seperate bug.