Fix bug 239560: kpresenter:msoffice2007:Embedded ppt is not displayed in Kpresenter

* Only recalculate the world transform if a
   Set{Window,Viewport}{Org,Ext} record actually changes anything.
 * Don't call recalculateWorldTransform in
   {set,modify}WorldTransform().

BUG: 239560

svn path=/branches/work/koffice-essen/; revision=1203890